Updates to use actual date rather than /today

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
 
-    <string name="app_name">Fusion by SPAC</string>
+    <string name="app_name">SPAC Fusion</string>
 </resources>
